wip(VcApiController): adding request and response bodies types annotations
